RESOLVED FIXED170182
WebAssembly: pass Wasm::Context* to vmEntryToWasm when not using fast TLS
https://bugs.webkit.org/show_bug.cgi?id=170182
Summary WebAssembly: pass Wasm::Context* to vmEntryToWasm when not using fast TLS
Yusuke Suzuki
Reported 2017-03-28 10:41:12 PDT
And set it to wasmContext GPR.
Attachments
WIP (14.52 KB, patch)
2017-03-29 16:40 PDT, Saam Barati
no flags
patch (17.26 KB, patch)
2017-03-29 16:57 PDT, Saam Barati
no flags
patch (17.26 KB, patch)
2017-03-29 16:58 PDT, Saam Barati
mark.lam: review+
patch for landing (17.36 KB, patch)
2017-03-29 17:20 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-03-29 15:29:55 PDT
working on this now
Saam Barati
Comment 2 2017-03-29 16:40:01 PDT
Created attachment 305806 [details] WIP might be done.
Saam Barati
Comment 3 2017-03-29 16:57:06 PDT
Saam Barati
Comment 4 2017-03-29 16:58:36 PDT
Build Bot
Comment 5 2017-03-29 17:01:50 PDT
Attachment 305808 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jsc.cpp:79: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
JF Bastien
Comment 6 2017-03-29 17:09:45 PDT
Comment on attachment 305808 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=305808&action=review Looks good. > Source/JavaScriptCore/ChangeLog:3 > + WebAssembly: pass JSWebAssemblyInstanace to vmEntryToWasm when not using fast TLS Typo "instance" > Source/JavaScriptCore/wasm/WasmContext.h:39 > +using Context = JSWebAssemblyInstance; FIXME to make this a class so we don't keep explaining to each other why it's like this for now.
Mark Lam
Comment 7 2017-03-29 17:13:58 PDT
Comment on attachment 305808 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=305808&action=review r=me > Source/JavaScriptCore/ChangeLog:3 > + WebAssembly: pass JSWebAssemblyInstanace to vmEntryToWasm when not using fast TLS typo: /JSWebAssemblyInstanace/JSWebAssemblyInstance/
Saam Barati
Comment 8 2017-03-29 17:20:06 PDT
Created attachment 305811 [details] patch for landing
WebKit Commit Bot
Comment 9 2017-03-30 00:29:06 PDT
Comment on attachment 305811 [details] patch for landing Clearing flags on attachment: 305811 Committed r214602: <http://trac.webkit.org/changeset/214602>
WebKit Commit Bot
Comment 10 2017-03-30 00:29:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.